<resources>
    <string name="app_name">jeju-road</string>
    <string name="text_main_toolbar_title">제주 맛집</string>
    <string name="text_restaurant_content_menu">대표메뉴</string>
    <string name="text_restaurant_information_title">기본정보</string>
    <string name="text_restaurant_information_address">주소</string>
    <string name="text_restaurant_information_how_to_go">가는방법</string>
    <string name="text_restaurant_information_serving_time">이용가능시간, 휴무일</string>
    <string name="text_restaurant_information_tipe">이곳의 이용팁</string>

    <string name="text_restaurant_content_image_count">1 / %d</string>
    <string name="text_restaurant_content_image_current_count">%d / %d</string>
</resources>