<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="isExpand"
            type="Boolean" />
        <import type="android.view.View"/>
    </data>

    <merge
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:parentTag="android.widget.FrameLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginVertical="@dimen/dp_32">

            <TextView
                android:id="@+id/textView_restaurant_information_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_restaurant_information_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@android:color/darker_gray"
                android:orientation="horizontal"
                android:padding="@dimen/dp_16">

                <TextView
                    android:text="@string/text_restaurant_information_address"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nanum_gotic_bold_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/textView_restaurant_information_address"
                    android:layout_marginStart="@dimen/dp_4"
                    android:fontFamily="@font/nanum_gotic_bold_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="제주특별자치도 제주시 서사로 11"/>

            </LinearLayout>

            <TextView
                android:text="@string/text_restaurant_information_how_to_go"
                android:textColor="@color/black"
                android:fontFamily="@font/nanum_gotic_bold_font"
                android:textSize="18sp"
                android:layout_marginTop="@dimen/dp_32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textView_restaurant_information_how_to_go"
                android:textSize="18sp"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="동문 재래 시장에서 도보 9분"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@android:color/darker_gray"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_restaurant_information_serving_time_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_32">

                <TextView
                    android:id="@+id/textView_restaurant_information_serving_time_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_restaurant_information_serving_time"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nanum_gotic_bold_font"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/imageView_restaurant_information_flip" />

                <ImageView
                    android:id="@+id/imageView_restaurant_information_flip"
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:background="@drawable/ic_arrow_back_24"
                    app:layout_constraintTop_toTopOf="@id/textView_restaurant_information_serving_time_title"
                    app:layout_constraintStart_toEndOf="@id/textView_restaurant_information_serving_time_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/textView_restaurant_information_serving_time_title"/>

                <TextView
                    android:id="@+id/textView_restaurant_information_serving_time"
                    android:textSize="18sp"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{isExpand ? View.GONE : View.VISIBLE}"
                    app:layout_constraintTop_toBottomOf="@id/textView_restaurant_information_serving_time_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="오늘 (11.21) 13:00 - 22:30"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_restaurant_information_serving_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:visibility="@{isExpand ? View.VISIBLE : View.GONE}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/textView_restaurant_information_serving_time_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:visibility="gone"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:text="@string/text_restaurant_information_tipe"
                android:textColor="@color/black"
                android:fontFamily="@font/nanum_gotic_bold_font"
                android:textSize="18sp"
                android:layout_marginTop="@dimen/dp_32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textView_restaurant_information_tip"
                android:textSize="18sp"
                android:lineSpacingExtra="@dimen/dp_4"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="무료 주차 가능\n- 주차 공간 협소\n예약 가능"/>

        </LinearLayout>

    </merge>
</layout>